crates/parser/tests/snapshots/block_string_basic.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-basic

## Input

```
key |
  line 1
  line 2

```

## CST

```
SOURCE_FILE@0..24
  ENTRY@0..23
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..23
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..14
        STRING@8..14 "line 1"
      NEWLINE@14..15 "\n"
      SPACE@15..17 "  "
      LINE_STRING@17..23
        STRING@17..23 "line 2"
  NEWLINE@23..24 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..14 "line 1",
                    },
                    LineString {
                        string: STRING@17..23 "line 2",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
