crates/parser/tests/snapshots/block_string_body_trailing_whitespace.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-body-trailing-whitespace

## Input

```
key |
  hello   
  world  

```

## CST

```
SOURCE_FILE@0..27
  ENTRY@0..26
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..26
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..16
        STRING@8..16 "hello   "
      NEWLINE@16..17 "\n"
      SPACE@17..19 "  "
      LINE_STRING@19..26
        STRING@19..26 "world  "
  NEWLINE@26..27 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..16 "hello   ",
                    },
                    LineString {
                        string: STRING@19..26 "world  ",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
