crates/parser/tests/snapshots/block_string_chomp_keep_trailing.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-chomp-keep-trailing

## Input

```
key |+
  line


foo bar

```

## CST

```
SOURCE_FILE@0..24
  ENTRY@0..16
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..16
      BLOCK_STRING_HEADER@4..7
        PIPE@4..5 "|"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..13
        STRING@9..13 "line"
      NEWLINE@13..14 "\n"
      LINE_STRING@14..14
      NEWLINE@14..15 "\n"
      LINE_STRING@15..15
      NEWLINE@15..16 "\n"
  ENTRY@16..24
    WORD_KEY@16..19
      WORD@16..19 "foo"
    SPACE@19..20 " "
    LINE_STRING@20..23
      STRING@20..23 "bar"
    NEWLINE@23..24 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: none,
                    chomp: PLUS@5..6 "+",
                },
                lines: [
                    LineString {
                        string: STRING@9..13 "line",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@16..19 "foo",
            },
            value: LineString {
                string: STRING@20..23 "bar",
            },
        },
    ],
}
```

vim:ft=markdown
